chore: add comments and minor styling in AccountServiceImpl in bankapp in ch18